Closes #60
Fix comments from PR
