# backend/src/api/Mapers/ContractMappingExtensions.cs
@@ -53,7 +53,7 @@ public static class ContractMappingExtensions {
             UserId: userId,
             ListId: Id,
             Tag: request.Tag,
-            Completed: request.Compleated,
+            Completed: request.Completed,
             Page: request.Page.HasValue ? request.Page!.Value : GetListRequest.DefaultPage,
             PageSize: request.PageSize.HasValue ? request.PageSize!.Value : GetListRequest.DefaultPageSize,
             IncludeSubtasks: !request.IncludeSubtasks.HasValue || request.IncludeSubtasks!.Value
